--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,14 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "rakutentech/laravel-request-docs": "^2.38",
-        "spatie/laravel-permission": "^6.7"
+        "spatie/laravel-permission": "^6.7",
+        "php-di/php-di": "^7.0",
+        "slim/slim": "^4.0",
+        "php-di/slim-bridge": "^3.1.0",
+        "slim/psr7": "^1.3.0",
+        "monolog/monolog": "^3.0",
+        "twig/twig": "^3.0",
+        "slim/twig-view": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -21,7 +28,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "heroku/heroku-buildpack-php": "*"
     },
     "autoload": {
         "psr-4": {
