--- a/.env.example
+++ b/.env.example
@@ -6,24 +6,27 @@ APP_URL=http://localhost:8000
 FRONTEND_URL=http://localhost:3000
 SESSION_DOMAIN=localhost
 SANCTUM_STATEFUL_DOMAINS=localhost:3000
+SESSION_SECURE_COOKIE=true
 
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=debugs
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=studentmanagement
+DB_HOST=2m83bx.stackhero-network.com
+DB_PORT=4876
+DB_DATABASE=root
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=dIeHpOy5Y7M8iQmm3dFXU8KvIu3UEsVQ
+DB_SSL=true
+DB_REQUIRE_SSL=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
@@ -33,13 +36,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=zouhirharabazann@gmail.com
+MAIL_PASSWORD=sfbzuehtapkgjnpf
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="zouhirharabazann@gmail.com"
+MAIL_FROM_NAME="Groupe El houria"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
