--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,19 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.29",
-        "laravel/framework": "^10.10",
+        "laravel/framework": "^10.48",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "rakutentech/laravel-request-docs": "^2.38",
-        "spatie/laravel-permission": "^6.7",
-        "php-di/php-di": "^7.0",
-        "slim/slim": "^4.0",
-        "php-di/slim-bridge": "^3.1.0",
-        "slim/psr7": "^1.3.0",
+        "marcandreappel/laravel-backblaze-b2": "^2.0",
         "monolog/monolog": "^3.0",
-        "twig/twig": "^3.0",
-        "slim/twig-view": "^3.0"
+        "php-di/php-di": "^7.0",
+        "php-di/slim-bridge": "^3.1.0",
+        "rakutentech/laravel-request-docs": "^2.38",
+        "slim/psr7": "^1.3.0",
+        "slim/slim": "^4.0",
+        "slim/twig-view": "^3.0",
+        "spatie/laravel-permission": "^6.7",
+        "twig/twig": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
